// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Check that it renders 320 px 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <AppIconGeneric
    name="word"
    size={320}
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <div
          style={
                    Object {
                              "display": "flex",
                              "height": 84,
                              "justifyContent": "space-between",
                              "margin": 8,
                              "maxHeight": 84,
                            }
          }
>
          <div
                    style={
                              Object {
                                        "fontSize": 44,
                                        "fontWeight": 400,
                                        "lineHeight": "44px",
                                      }
                    }
                    title={undefined}
          />
</div>,
        <div
          style={
                    Object {
                              "height": 116,
                            }
          }
>
          <img
                    src={undefined}
                    style={
                              Object {
                                        "height": 120,
                                        "marginLeft": 100,
                                        "marginTop": 0,
                                        "position": "relative",
                                        "width": "auto",
                                      }
                    }
          />
</div>,
        <div
          style={
                    Object {
                              "alignItems": " flex-end",
                              "display": "flex",
                              "height": 84,
                              "justifyContent": "space-between",
                              "margin": 8,
                              "maxHeight": 84,
                              "textOverflow": " elipsis",
                              "xoverflow": " hidden",
                            }
          }
>
          <div
                    style={
                              Object {
                                        "fontSize": 22,
                                        "fontWeight": 300,
                                        "lineHeight": "22px",
                                      }
                    }
                    title={undefined}
          />
          <div
                    style={
                              Object {
                                        "flexGrow": "none",
                                        "flexShrink": "none",
                                        "marginRight": 0,
                                        "minWidth": 0,
                                        "width": 0,
                                      }
                    }
          >
                    
          </div>
</div>,
      ],
      "className": "FontSegoeWhite",
      "onClick": [Function],
      "onMouseEnter": [Function],
      "onMouseLeave": [Function],
      "style": Object {
        "backgroundColor": undefined,
        "cursor": "pointer",
        "height": 320,
        "overflow": "hidden",
        "width": 320,
      },
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <div
              style={
                            Object {
                                          "fontSize": 44,
                                          "fontWeight": 400,
                                          "lineHeight": "44px",
                                        }
              }
              title={undefined}
/>,
            undefined,
            undefined,
          ],
          "style": Object {
            "display": "flex",
            "height": 84,
            "justifyContent": "space-between",
            "margin": 8,
            "maxHeight": 84,
          },
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": undefined,
              "style": Object {
                "fontSize": 44,
                "fontWeight": 400,
                "lineHeight": "44px",
              },
              "title": undefined,
            },
            "ref": null,
            "rendered": null,
            "type": "div",
          },
          undefined,
          undefined,
        ],
        "type": "div",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": <img
            src={undefined}
            style={
                        Object {
                                    "height": 120,
                                    "marginLeft": 100,
                                    "marginTop": 0,
                                    "position": "relative",
                                    "width": "auto",
                                  }
            }
/>,
          "style": Object {
            "height": 116,
          },
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "src": undefined,
            "style": Object {
              "height": 120,
              "marginLeft": 100,
              "marginTop": 0,
              "position": "relative",
              "width": "auto",
            },
          },
          "ref": null,
          "rendered": null,
          "type": "img",
        },
        "type": "div",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <div
              style={
                            Object {
                                          "fontSize": 22,
                                          "fontWeight": 300,
                                          "lineHeight": "22px",
                                        }
              }
              title={undefined}
/>,
            <div
              style={
                            Object {
                                          "flexGrow": "none",
                                          "flexShrink": "none",
                                          "marginRight": 0,
                                          "minWidth": 0,
                                          "width": 0,
                                        }
              }
>
              
</div>,
          ],
          "style": Object {
            "alignItems": " flex-end",
            "display": "flex",
            "height": 84,
            "justifyContent": "space-between",
            "margin": 8,
            "maxHeight": 84,
            "textOverflow": " elipsis",
            "xoverflow": " hidden",
          },
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": undefined,
              "style": Object {
                "fontSize": 22,
                "fontWeight": 300,
                "lineHeight": "22px",
              },
              "title": undefined,
            },
            "ref": null,
            "rendered": null,
            "type": "div",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                undefined,
                undefined,
                undefined,
              ],
              "style": Object {
                "flexGrow": "none",
                "flexShrink": "none",
                "marginRight": 0,
                "minWidth": 0,
                "width": 0,
              },
            },
            "ref": null,
            "rendered": Array [
              undefined,
              undefined,
              undefined,
            ],
            "type": "div",
          },
        ],
        "type": "div",
      },
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <div
            style={
                        Object {
                                    "display": "flex",
                                    "height": 84,
                                    "justifyContent": "space-between",
                                    "margin": 8,
                                    "maxHeight": 84,
                                  }
            }
>
            <div
                        style={
                                    Object {
                                                "fontSize": 44,
                                                "fontWeight": 400,
                                                "lineHeight": "44px",
                                              }
                        }
                        title={undefined}
            />
</div>,
          <div
            style={
                        Object {
                                    "height": 116,
                                  }
            }
>
            <img
                        src={undefined}
                        style={
                                    Object {
                                                "height": 120,
                                                "marginLeft": 100,
                                                "marginTop": 0,
                                                "position": "relative",
                                                "width": "auto",
                                              }
                        }
            />
</div>,
          <div
            style={
                        Object {
                                    "alignItems": " flex-end",
                                    "display": "flex",
                                    "height": 84,
                                    "justifyContent": "space-between",
                                    "margin": 8,
                                    "maxHeight": 84,
                                    "textOverflow": " elipsis",
                                    "xoverflow": " hidden",
                                  }
            }
>
            <div
                        style={
                                    Object {
                                                "fontSize": 22,
                                                "fontWeight": 300,
                                                "lineHeight": "22px",
                                              }
                        }
                        title={undefined}
            />
            <div
                        style={
                                    Object {
                                                "flexGrow": "none",
                                                "flexShrink": "none",
                                                "marginRight": 0,
                                                "minWidth": 0,
                                                "width": 0,
                                              }
                        }
            >
                        
            </div>
</div>,
        ],
        "className": "FontSegoeWhite",
        "onClick": [Function],
        "onMouseEnter": [Function],
        "onMouseLeave": [Function],
        "style": Object {
          "backgroundColor": undefined,
          "cursor": "pointer",
          "height": 320,
          "overflow": "hidden",
          "width": 320,
        },
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <div
                style={
                                Object {
                                                "fontSize": 44,
                                                "fontWeight": 400,
                                                "lineHeight": "44px",
                                              }
                }
                title={undefined}
/>,
              undefined,
              undefined,
            ],
            "style": Object {
              "display": "flex",
              "height": 84,
              "justifyContent": "space-between",
              "margin": 8,
              "maxHeight": 84,
            },
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": undefined,
                "style": Object {
                  "fontSize": 44,
                  "fontWeight": 400,
                  "lineHeight": "44px",
                },
                "title": undefined,
              },
              "ref": null,
              "rendered": null,
              "type": "div",
            },
            undefined,
            undefined,
          ],
          "type": "div",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": <img
              src={undefined}
              style={
                            Object {
                                          "height": 120,
                                          "marginLeft": 100,
                                          "marginTop": 0,
                                          "position": "relative",
                                          "width": "auto",
                                        }
              }
/>,
            "style": Object {
              "height": 116,
            },
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "src": undefined,
              "style": Object {
                "height": 120,
                "marginLeft": 100,
                "marginTop": 0,
                "position": "relative",
                "width": "auto",
              },
            },
            "ref": null,
            "rendered": null,
            "type": "img",
          },
          "type": "div",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <div
                style={
                                Object {
                                                "fontSize": 22,
                                                "fontWeight": 300,
                                                "lineHeight": "22px",
                                              }
                }
                title={undefined}
/>,
              <div
                style={
                                Object {
                                                "flexGrow": "none",
                                                "flexShrink": "none",
                                                "marginRight": 0,
                                                "minWidth": 0,
                                                "width": 0,
                                              }
                }
>
                
</div>,
            ],
            "style": Object {
              "alignItems": " flex-end",
              "display": "flex",
              "height": 84,
              "justifyContent": "space-between",
              "margin": 8,
              "maxHeight": 84,
              "textOverflow": " elipsis",
              "xoverflow": " hidden",
            },
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": undefined,
                "style": Object {
                  "fontSize": 22,
                  "fontWeight": 300,
                  "lineHeight": "22px",
                },
                "title": undefined,
              },
              "ref": null,
              "rendered": null,
              "type": "div",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": Array [
                  undefined,
                  undefined,
                  undefined,
                ],
                "style": Object {
                  "flexGrow": "none",
                  "flexShrink": "none",
                  "marginRight": 0,
                  "minWidth": 0,
                  "width": 0,
                },
              },
              "ref": null,
              "rendered": Array [
                undefined,
                undefined,
                undefined,
              ],
              "type": "div",
            },
          ],
          "type": "div",
        },
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`Check that it renders disabled color  1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <AppIconGeneric
    disabledColor="grey"
    name="word"
    size={320}
    state="disabled"
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <div
          style={
                    Object {
                              "display": "flex",
                              "height": 84,
                              "justifyContent": "space-between",
                              "margin": 8,
                              "maxHeight": 84,
                            }
          }
>
          <div
                    style={
                              Object {
                                        "fontSize": 44,
                                        "fontWeight": 400,
                                        "lineHeight": "44px",
                                      }
                    }
                    title={undefined}
          />
</div>,
        <div
          style={
                    Object {
                              "height": 116,
                            }
          }
>
          <img
                    src={undefined}
                    style={
                              Object {
                                        "height": 120,
                                        "marginLeft": 100,
                                        "marginTop": 0,
                                        "position": "relative",
                                        "width": "auto",
                                      }
                    }
          />
</div>,
        <div
          style={
                    Object {
                              "alignItems": " flex-end",
                              "display": "flex",
                              "height": 84,
                              "justifyContent": "space-between",
                              "margin": 8,
                              "maxHeight": 84,
                              "textOverflow": " elipsis",
                              "xoverflow": " hidden",
                            }
          }
>
          <div
                    style={
                              Object {
                                        "fontSize": 22,
                                        "fontWeight": 300,
                                        "lineHeight": "22px",
                                      }
                    }
                    title={undefined}
          />
          <div
                    style={
                              Object {
                                        "flexGrow": "none",
                                        "flexShrink": "none",
                                        "marginRight": 0,
                                        "minWidth": 0,
                                        "width": 0,
                                      }
                    }
          >
                    
          </div>
</div>,
      ],
      "className": "FontSegoeWhite",
      "onClick": [Function],
      "onMouseEnter": [Function],
      "onMouseLeave": [Function],
      "style": Object {
        "backgroundColor": "grey",
        "cursor": "pointer",
        "height": 320,
        "overflow": "hidden",
        "width": 320,
      },
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <div
              style={
                            Object {
                                          "fontSize": 44,
                                          "fontWeight": 400,
                                          "lineHeight": "44px",
                                        }
              }
              title={undefined}
/>,
            undefined,
            undefined,
          ],
          "style": Object {
            "display": "flex",
            "height": 84,
            "justifyContent": "space-between",
            "margin": 8,
            "maxHeight": 84,
          },
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": undefined,
              "style": Object {
                "fontSize": 44,
                "fontWeight": 400,
                "lineHeight": "44px",
              },
              "title": undefined,
            },
            "ref": null,
            "rendered": null,
            "type": "div",
          },
          undefined,
          undefined,
        ],
        "type": "div",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": <img
            src={undefined}
            style={
                        Object {
                                    "height": 120,
                                    "marginLeft": 100,
                                    "marginTop": 0,
                                    "position": "relative",
                                    "width": "auto",
                                  }
            }
/>,
          "style": Object {
            "height": 116,
          },
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "src": undefined,
            "style": Object {
              "height": 120,
              "marginLeft": 100,
              "marginTop": 0,
              "position": "relative",
              "width": "auto",
            },
          },
          "ref": null,
          "rendered": null,
          "type": "img",
        },
        "type": "div",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <div
              style={
                            Object {
                                          "fontSize": 22,
                                          "fontWeight": 300,
                                          "lineHeight": "22px",
                                        }
              }
              title={undefined}
/>,
            <div
              style={
                            Object {
                                          "flexGrow": "none",
                                          "flexShrink": "none",
                                          "marginRight": 0,
                                          "minWidth": 0,
                                          "width": 0,
                                        }
              }
>
              
</div>,
          ],
          "style": Object {
            "alignItems": " flex-end",
            "display": "flex",
            "height": 84,
            "justifyContent": "space-between",
            "margin": 8,
            "maxHeight": 84,
            "textOverflow": " elipsis",
            "xoverflow": " hidden",
          },
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": undefined,
              "style": Object {
                "fontSize": 22,
                "fontWeight": 300,
                "lineHeight": "22px",
              },
              "title": undefined,
            },
            "ref": null,
            "rendered": null,
            "type": "div",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                undefined,
                undefined,
                undefined,
              ],
              "style": Object {
                "flexGrow": "none",
                "flexShrink": "none",
                "marginRight": 0,
                "minWidth": 0,
                "width": 0,
              },
            },
            "ref": null,
            "rendered": Array [
              undefined,
              undefined,
              undefined,
            ],
            "type": "div",
          },
        ],
        "type": "div",
      },
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <div
            style={
                        Object {
                                    "display": "flex",
                                    "height": 84,
                                    "justifyContent": "space-between",
                                    "margin": 8,
                                    "maxHeight": 84,
                                  }
            }
>
            <div
                        style={
                                    Object {
                                                "fontSize": 44,
                                                "fontWeight": 400,
                                                "lineHeight": "44px",
                                              }
                        }
                        title={undefined}
            />
</div>,
          <div
            style={
                        Object {
                                    "height": 116,
                                  }
            }
>
            <img
                        src={undefined}
                        style={
                                    Object {
                                                "height": 120,
                                                "marginLeft": 100,
                                                "marginTop": 0,
                                                "position": "relative",
                                                "width": "auto",
                                              }
                        }
            />
</div>,
          <div
            style={
                        Object {
                                    "alignItems": " flex-end",
                                    "display": "flex",
                                    "height": 84,
                                    "justifyContent": "space-between",
                                    "margin": 8,
                                    "maxHeight": 84,
                                    "textOverflow": " elipsis",
                                    "xoverflow": " hidden",
                                  }
            }
>
            <div
                        style={
                                    Object {
                                                "fontSize": 22,
                                                "fontWeight": 300,
                                                "lineHeight": "22px",
                                              }
                        }
                        title={undefined}
            />
            <div
                        style={
                                    Object {
                                                "flexGrow": "none",
                                                "flexShrink": "none",
                                                "marginRight": 0,
                                                "minWidth": 0,
                                                "width": 0,
                                              }
                        }
            >
                        
            </div>
</div>,
        ],
        "className": "FontSegoeWhite",
        "onClick": [Function],
        "onMouseEnter": [Function],
        "onMouseLeave": [Function],
        "style": Object {
          "backgroundColor": "grey",
          "cursor": "pointer",
          "height": 320,
          "overflow": "hidden",
          "width": 320,
        },
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <div
                style={
                                Object {
                                                "fontSize": 44,
                                                "fontWeight": 400,
                                                "lineHeight": "44px",
                                              }
                }
                title={undefined}
/>,
              undefined,
              undefined,
            ],
            "style": Object {
              "display": "flex",
              "height": 84,
              "justifyContent": "space-between",
              "margin": 8,
              "maxHeight": 84,
            },
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": undefined,
                "style": Object {
                  "fontSize": 44,
                  "fontWeight": 400,
                  "lineHeight": "44px",
                },
                "title": undefined,
              },
              "ref": null,
              "rendered": null,
              "type": "div",
            },
            undefined,
            undefined,
          ],
          "type": "div",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": <img
              src={undefined}
              style={
                            Object {
                                          "height": 120,
                                          "marginLeft": 100,
                                          "marginTop": 0,
                                          "position": "relative",
                                          "width": "auto",
                                        }
              }
/>,
            "style": Object {
              "height": 116,
            },
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "src": undefined,
              "style": Object {
                "height": 120,
                "marginLeft": 100,
                "marginTop": 0,
                "position": "relative",
                "width": "auto",
              },
            },
            "ref": null,
            "rendered": null,
            "type": "img",
          },
          "type": "div",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <div
                style={
                                Object {
                                                "fontSize": 22,
                                                "fontWeight": 300,
                                                "lineHeight": "22px",
                                              }
                }
                title={undefined}
/>,
              <div
                style={
                                Object {
                                                "flexGrow": "none",
                                                "flexShrink": "none",
                                                "marginRight": 0,
                                                "minWidth": 0,
                                                "width": 0,
                                              }
                }
>
                
</div>,
            ],
            "style": Object {
              "alignItems": " flex-end",
              "display": "flex",
              "height": 84,
              "justifyContent": "space-between",
              "margin": 8,
              "maxHeight": 84,
              "textOverflow": " elipsis",
              "xoverflow": " hidden",
            },
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": undefined,
                "style": Object {
                  "fontSize": 22,
                  "fontWeight": 300,
                  "lineHeight": "22px",
                },
                "title": undefined,
              },
              "ref": null,
              "rendered": null,
              "type": "div",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": Array [
                  undefined,
                  undefined,
                  undefined,
                ],
                "style": Object {
                  "flexGrow": "none",
                  "flexShrink": "none",
                  "marginRight": 0,
                  "minWidth": 0,
                  "width": 0,
                },
              },
              "ref": null,
              "rendered": Array [
                undefined,
                undefined,
                undefined,
              ],
              "type": "div",
            },
          ],
          "type": "div",
        },
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;
